fix: edit problem with z-index in burger menu

--- a/english-for-kids/src/sass/base/_burger-menu.scss
+++ b/english-for-kids/src/sass/base/_burger-menu.scss
@@ -15,7 +15,7 @@
   position: absolute;
   width: 35px;
   cursor: pointer;
-  z-index: 3;
+  z-index: 4;
   margin: -20px 0px;
 }
 .burger__button > span,
@@ -49,7 +49,7 @@
   background-color: $color-play;
   box-shadow: 1px 0px 6px rgba(0, 0, 0, .2);
   transition-duration: .25s;
-  z-index: 2;
+  z-index: 3;
 }
 .menu__item{
   display: block;
